Enhance styling and structure across multiple HTML files for improved design consistency

--- a/closure_.html
+++ b/closure_.html
@@ -18,6 +18,11 @@
 
       /* ✅ Goed: Minimalistisch ontwerp dat principe van closure toepast */
       .good-box {
+        background-color: rgb(248, 248, 248);
+        width: 200px;
+        border-left: 0.25rem solid black;
+        padding: 10px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
     </style>
   </head>
@@ -38,11 +43,12 @@
     <div class="good-box">
       <h3>Informatie</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-        quaerat amet expedita voluptatum molestiae beatae eum dicta deleniti
-        autem, necessitatibus hic id culpa impedit delectus laudantium natus!
-        Praesentium, fugit expedita!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
       </p>
     </div>
+    <p>Adipisci
+      quaerat amet expedita voluptatum molestiae beatae eum dicta deleniti
+      autem, necessitatibus hic id culpa impedit delectus laudantium natus!
+      Praesentium, fugit expedita!</p>
   </body>
 </html>
