--- a/continuity_.html
+++ b/continuity_.html
@@ -16,6 +16,19 @@
         gap: 30px;
       }
       /* ✅ Beter voorbeeld van continiuity */
+
+      .good-nav {
+        list-style-type: none;
+        display: flex;
+        gap: 30px;
+      }
+
+      .good-nav li:not(:last-child)::after {
+        content: "->";
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+      
     </style>
   </head>
   <body>
