--- a/similarity_.html
+++ b/similarity_.html
@@ -43,6 +43,26 @@
       }
 
       /* ✅ Goed: Consistente knoppen met hiërarchie */
+      .good-buttons .button {
+        font-size: 16px;
+        padding: 10px 20px;
+        margin: 5px;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        background-color: #007bff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .good-buttons .button.primary {
+        background-color: #007bff;
+      }
+
+      .good-buttons .button.secondary {
+        background-color: #6c757d;
+      }
+
     </style>
   </head>
   <body>
