Add border, border-radius, and padding to proximity element for improved styling

--- a/proximity_.html
+++ b/proximity_.html
@@ -35,6 +35,9 @@
         display: block;
         width: 100%;
         max-width: 300px;
+        border: 2px solid rgb(126, 229, 255);
+        border-radius: 4px;
+        padding: 12px 20px;
       }
       
     </style>
